# pylrclib

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SMOKE_TEST_REPORT.txt  pyproject.toml
pylrclib/: __init__.py  __main__.py  config.py  discovery.py  exceptions.py  i18n.py  i18n_strings.py  interaction.py  logging_utils.py
pylrclib/api/: client.py  http.py  pow.py  publish.py  retry.py
pylrclib/cli/: helptext.py  main.py
pylrclib/commands/: cleanse.py  doctor.py  down.py  inspect.py  search.py  up.py
pylrclib/fs/: __init__.py  cleaner.py  mover.py
pylrclib/lrc/: __init__.py  matcher.py  parser.py
pylrclib/lyrics/: __init__.py  loader.py  writer.py
pylrclib/models/: __init__.py  lyrics.py  track.py
pylrclib/workflows/: down.py  search.py  up.py
tests/: conftest.py  test_api.py  test_cli_smoke.py  test_fs.py  test_matcher.py  test_parser.py
